fix logo align

--- a/_sass/logo.scss
+++ b/_sass/logo.scss
@@ -1,9 +1,12 @@
 
+
+////  ATTENTION MOBILE FIRST
+
 .logo{
     display: block;
     position: relative;
     z-index: 100;
-    width: 40px;
+    width: 30px;
     cursor: pointer;
     transform: scale(1);
     transition: all, 0.5s;
@@ -38,10 +41,4 @@
 
 .logo-img{
     display: block;
-}
-
-@media all and (max-width: $mobile){
-    .logo{
-        width: 30px;
-    }
 }
